Fix truncated radio buttons in chrome

--- a/webprotege-server/src/main/webapp/css/WebProtege.css
+++ b/webprotege-server/src/main/webapp/css/WebProtege.css
@@ -781,7 +781,6 @@ td {
 
 .gwt-CheckBox {
     display:     flex;
-    overflow:    hidden;
     align-items: center;
     align-self:  baseline;
     flex-wrap:   nowrap;
@@ -789,12 +788,12 @@ td {
 
 .gwt-RadioButton {
     display:     flex;
-    overflow:    hidden;
     align-items: center;
     align-self:  baseline;
     flex-wrap:   nowrap;
     flex-grow:   0;
     flex-shrink: 0;
+    min-height: 20px;
 }
 
 .gwt-CheckBox > label {
